After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785032 - encoder: vp9: crash when setting ref-pic-mode
encoder: vp9: crash when setting ref-pic-mode
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer-vaapi
unspecified
Other All
: Normal normal
: 1.12.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-07-17 16:59 UTC by Víctor Manuel Jáquez Leal
Modified: 2017-07-17 17:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
libs: encoder: vp9: array terminated in zeros (1.12 KB, patch)
2017-07-17 16:59 UTC, Víctor Manuel Jáquez Leal
committed Details | Review

Description Víctor Manuel Jáquez Leal 2017-07-17 16:59:11 UTC
There is a crash when setting ref-pic-mode since the #GEnumValue
array is not terminated with a structured with all memvers being
zero.
Comment 1 Víctor Manuel Jáquez Leal 2017-07-17 16:59:15 UTC
Created attachment 355770 [details] [review]
libs: encoder: vp9: array terminated in zeros
Comment 2 Víctor Manuel Jáquez Leal 2017-07-17 16:59:40 UTC
Attachment 355770 [details] pushed as a9c13a0 - libs: encoder: vp9: array terminated in zeros
Comment 3 Víctor Manuel Jáquez Leal 2017-07-17 17:01:20 UTC
branch 1.12
commit 15f0bdb878efb35d8e6f1f01218a08ea45035dd5
Comment 4 Víctor Manuel Jáquez Leal 2017-07-17 17:02:25 UTC
branch 1.10
commit 92c24504959055279582af8923a992716a7d4d7c